:octocat: The function to detect bluetooth devices is done.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">AppG</string>
     <string name="bluetooth">Bluetooth</string>
+    <string name="on_search_devices">Buscando dispositivos</string>
+    <string name="on_error">Error</string>
+    <string name="bluetooth_activated">Bluetooth activado</string>
+    <string name="bluetooth_disabled">Bluetooth desactivado</string>
+    <string name="device_unknown">unknown</string>
+    <string name="device_dbm">dBm</string>
 </resources>
